web-infras/parser/tests/fixtures/babel/es2015/uncategorised/324/output.txt
[SyntaxError]: Missing initializer in const declaration (1,5)
1|let [x]
 |   ^
